k8s-nodejs.yml
apiVersion: v1
kind: Service
metadata:
 name: nodejs-service
 labels:
   app: nodejs
spec:
 type: LoadBalancer
 selector:
  component: web
 ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: nodejs
 name: nodejs
spec:
 replicas: 1
 selector:
  matchLabels:
   component: web
 template:
  metadata:
   labels:
    component: web
  spec:
   containers: 
    - name: nodejs
      image: cmotta2016/nodejs-ex
      ports:
       - containerPort: 8080
